--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "MyPortfolio",
-  "private": true,
+  "private": false,
   "homepage": "https://github.com/Yuriy-Chernov/MyPortfolio",
   "version": "0.0.0",
   "type": "module",
