--- a/package.json
+++ b/package.json
@@ -7,22 +7,22 @@
     "dev": "vite",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "deploy": "gh-pages -d dist",
+    "predeply": "pnpm run build"
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
     "@emotion/react": "^11.14.0",
-
-    "@tsparticles/react": "^3.0.0",
     "@types/react-scroll": "^1.8.10",
     "framer-motion": "^12.5.0",
+    "gh-pages": "^6.3.0",
     "react": "^18.3.1",
     "react-alice-carousel": "^2.9.1",
     "react-awesome-reveal": "^4.3.1",
     "react-dom": "^18.3.1",
     "react-parallax-tilt": "^1.7.286",
     "react-scroll": "^1.9.3",
-
     "styled-components": "^6.1.13",
     "typewriter-effect": "^2.21.0"
   },
